# teststuff

./: .pylintrc  CITATION.cff  CMakeLists.txt  bar.py  check_avx2.cc  check_avx512f.cc  cirq-readme.md  foo.cc  foo.md  foo.py  foo.rst  inc.rst  parse_context.cc  readme.rst  z.rst
.github/workflows/: check_avx512f.cc  ci.yaml  citation-updater.yaml  lint-c++-files.yaml  lint-python-files.yaml  pr-labeler.yaml  t1.yaml  t2.yaml  test.yaml  test2.yaml
release/: __init__.py
tensorflow_quantum/: parse_context.cc
